--- a/practice/form.html
+++ b/practice/form.html
@@ -8,7 +8,7 @@
     <title>RFI Join Page - Letlotlo Hlaoli</title>
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="styles/join.css">
-    <script defer src="scripts/rfihome.js"></script>
+    <script defer src="scripts/form.js"></script>
     <link rel="icon" href="images/fav.jpg" type="image/x-icon">
 
     <!-- Open Graph Meta Properties for Facebook -->
