--- a/practice/form.html
+++ b/practice/form.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Final project Join page for WDD 231 - Web Frontend Development I">
     <title>RFI Join Page - Letlotlo Hlaoli</title>
     <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="styles/join.css">
+    <link rel="stylesheet" href="styles/from.css">
     <script defer src="scripts/form.js"></script>
     <link rel="icon" href="images/fav.jpg" type="image/x-icon">
 
