--- a/practice/form.html
+++ b/practice/form.html
@@ -44,7 +44,7 @@
             </picture>
             <h1>Enquiry Form</h1>
         </section>
-        <form method="get" action="thankyou.html">
+        <form>
     <!-- Applicant's First Name -->
     <label for="first-name" class="form-label">First Name <span class="required">*</span></label>
     <input type="text" id="first-name" name="first-name" required title="Enter your first name" autocomplete="given-name" placeholder="John">
