--- a/practice/thankyou.html
+++ b/practice/thankyou.html
@@ -14,7 +14,7 @@
     <main>
         <p>Your submission has been received. Below are all past enquiries:</p>
         <div id="submission-details"></div>
-        <a href="index.html">Back to Home</a>
+        <a href="form.html">Back to Home</a>
     </main>
 </body>
 </html>
